# discretelog

./: .flake8  .gitignore  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
discretelog/: __init__.py  __main__.py  block_lanczos.py  common.py  linear_sieve_index_calculus.py  naive_index_calculus.py  utils.py
docs/: external.md
tests/: conftest.py  test_block_lanczos.py  test_common.py  test_discretelog.py  test_linear_sieve_index_calculus.py  test_naive_index_calculus.py  test_nt_utils.py
