[tool.poetry]
name = "discretelog"
version = "0.1.1"
description = "Discrete logarithms in the ring of integers modulo n"
authors = ["gilcu3"]
readme = "README.md"
license = "Apache Software License 2.0"
homepage = "https://github.com/gilcu3/discretelog"
repository = "https://github.com/gilcu3/discretelog"
keywords = ["discrete logarithm", "number theory", "cryptography"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
	"Intended Audience :: Education",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering :: Mathematics",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
primefac = "^2.0.12"
tqdm = "^4.66.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"
pytest-benchmark = "^4.0.0"


[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^7.5.1"}
flake8 = "^7.0.0"
flake8-bugbear = "^24.4.26"
mypy = "^1.10.0"
types-tqdm = "^4.66.0.20240417"
types-colorama = "^0.4.15.20240311"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
[tool.coverage.report]
omit = ["tests/*"]
fail_under = 100



[tool.pytest.ini_options]
addopts = "-v --capture=sys"
filterwarnings = "ignore::pytest.PytestUnraisableExceptionWarning"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
