[tool.poetry]
name = "discretelog"
version = "0.1.1"
description = "Discrete logarithms in the ring of integers modulo n"
authors = ["gilcu3"]
readme = "README.md"
license = "Apache Software License 2.0"
homepage = "https://github.com/gilcu3/discretelog"
repository = "https://github.com/gilcu3/discretelog"
keywords = ["discrete logarithm", "number theory", "cryptography"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
	"Intended Audience :: Education",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering :: Mathematics",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
primefac = "^2.0.12"
tqdm = "^4.67.1"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.1"
pytest-benchmark = "^5.2.3"


[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^7.12.0"}
flake8 = "^7.3.0"
flake8-bugbear = "^25.10.21"
mypy = "^1.18.2"
types-tqdm = "^4.67.0.20250809"
types-colorama = "^0.4.15.20250801"
black = "^25.11.0"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]
[tool.coverage.report]
omit = ["tests/*"]
fail_under = 75

[tool.pytest.ini_options]
addopts = "-v --capture=sys"
filterwarnings = "ignore::pytest.PytestUnraisableExceptionWarning"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
